2003-02-01  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am: move built files to nodist_ targets so they don't
	end up in the dist tarfile.
	(modinclude_HEADERS): remove version.h and scmconfig.h.
	(nodist_modinclude_HEADERS): add version.h and scmconfig.h.

2003-01-27  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* evalext.c, evalext.h (s_scm_self_evaluating_p): Needed by
	syntax-case macro fix.

	* Makefile.am (c-tokenize.c): Look for it in $(srcdir).

2003-01-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.c (scm_sys_prep_layout_x): Bugfix: Only create layout for
	slots with instance allocation.
	
2002-12-15  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (EXTRA_DIST): add version.h.in to EXTRA_DIST.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* version.h.in (SCM_MICRO_VERSION): use @--@ substitution now.
	(SCM_MINOR_VERSION): use @--@ substitution now.
	(SCM_MICRO_VERSION): use @--@ substitution now.
	(scm_effective_version): new function prototype.

	* version.c (scm_effective_version): new function, also add
	effective-version.

	* Makefile.am (schemelibdir): VERSION -> GUILE_EFFECTIVE_VERSION.
	(libpath.h): use GUILE_EFFECTIVE_VERSION to compute
	SCM_LIBRARY_DIR.
	(version.h): generate this here rather than configure.in.  This
	approach tracks source edits better (i.e. more immediately).
	Might be worth considering for other .in files too.

2002-11-03  Marius Vollmer  <mvo@zagadka.ping.de>

 	* iselect.c: Include "_scm.h" before testing HAVE_UNISTD_H.
	Thanks to Bill Schottstaedt!

	* numbers.c (scm_integer_expt): Make 0^z == 0 for z != 0.

2002-10-25  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	Integrated libguile-ltdl/ from HEAD branch.

	* Makefile.am (INCLUDES): Include from ../libguile-ltdl/ instead
	of from $(INCLTDL).
	(libguile_la_LIBADD): Use ../libguile-ltdl/libguile-ltdl.la
	instead of $(LIBLTDL).

	* guile.c: Include "guile-ltdl.h" instead of "libltdl/ltdl.h".
	(main): switch to scm_lt_dlset_preloaded_symbols;
